homepage header footer

--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -1,3 +1,8 @@
-<div>
-  TEST
+<div class="navbar">
+  <div class="back">
+    <a href="../YnHelp">YnHelp</a>
+  </div>
+  <div class="search"></div>
+  <div class="link"></div>
+  <div class="login"></div>
 </div>
