--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,39 @@
-.background {
-  position: fixed;
-  background-image: url(../assets/background.png);
-  height: 80vh;
+* {
+  font-family: sans-serif;
+  border: 0;
+  padding: 0;
+}
+
+h1 {
+  font-family: sans-serif;
+}
+
+body {
   width: 100vw;
+  height: 80vh;
+}
+
+.equipe-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.member {
+  margin: 1%;
+  border-radius: 50px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  background-color: aqua;
+  width: 30vw;
+  text-transform: uppercase;
+}
+
+.member img {
+  width: 50px;
+  height: 50px;
+  align-self: center;
+  margin: 1%;
 }
