--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,13 +4,41 @@
   padding: 0;
 }
 
+html {
+  height: 100%;
+  width: 100%;
+}
+
 h1 {
   font-family: sans-serif;
 }
 
-body {
-  width: 100vw;
-  height: 80vh;
+h5 {
+  letter-spacing: 2px;
+}
+
+.background {
+  text-align: center;
+  background-image: url(../assets/background.png);
+  width: 100%;
+  height: 82vh;
+  position: fixed;
+  top: 9vh;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.title {
+  margin-top: 10%;
+}
+
+.presentation {
+  font-size: 1.8em;
+  width: 50vw;
+  align-self: center;
 }
 
 .equipe-container {
@@ -26,14 +54,15 @@ body {
   display: flex;
   flex-direction: column;
   align-content: center;
-  background-color: aqua;
-  width: 30vw;
+  background-color: rgba(98, 111, 111, 0.64);
+  width: 15vw;
   text-transform: uppercase;
 }
 
 .member img {
-  width: 50px;
-  height: 50px;
+  width: 10vw;
+  height: 10vw;
+  border-radius: 25px;
   align-self: center;
   margin: 1%;
 }
