--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -1,8 +1,18 @@
 <div class="navbar">
   <div class="back">
+    <a href="../YnHelp"><img src="./public/assets/logo.png" alt="" /></a>
     <a href="../YnHelp">YnHelp</a>
   </div>
-  <div class="search"></div>
-  <div class="link"></div>
-  <div class="login"></div>
+  <div class="search">
+    <img src="./public/assets/loupe.png" alt="" />
+    <h3>Rechercher</h3>
+  </div>
+  <div class="link">
+    <a href="../aides"> <h3>Aides</h3></a>
+    <a href="../associations"> <h3>Associations</h3></a>
+  </div>
+  <div class="login">
+    <a href="../login"><img src="./public/assets/user.png" alt="" /></a>
+    <a href="../login"><h3>Login</h3></a>
+  </div>
 </div>
