--- a/public/css/home.css
+++ b/public/css/home.css
@@ -18,10 +18,12 @@ h5 {
 }
 
 .background {
-  text-align: center;
   background-image: url(../assets/background.png);
-  width: 100%;
-  height: 82vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 100vw;
+  height: 91vh;
   position: fixed;
   top: 9vh;
   left: 0;
