--- a/public/css/home.css
+++ b/public/css/home.css
@@ -22,7 +22,7 @@ h5 {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  width: 100vw;
+  width: 100%;
   height: 91vh;
   position: fixed;
   top: 9vh;
