--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,5 @@
 * {
-  font-family: sans-serif;
+  font-family: Montserrat, sans-serif;
   border: 0;
   padding: 0;
 }
@@ -23,7 +23,7 @@ h5 {
 
   background-size: cover;
   width: 100vw;
-  height: 91vh;
+  height: 100vh;
   top: 10vh;
   left: 0;
   display: flex;
