--- a/public/css/header.css
+++ b/public/css/header.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+body {
+  font-family: 'Arial', sans-serif;
+}
+
 a {
   color: #000000;
 }
@@ -37,6 +41,7 @@ a:hover {
   justify-content: space-around;
   align-items: center;
   position: fixed;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
 }
 
 a img {
@@ -54,6 +59,7 @@ a img {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .search:hover {
@@ -68,6 +74,7 @@ a img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .login {
@@ -75,9 +82,22 @@ a img {
   justify-content: space-between;
   align-items: center;
   width: 10vw;
+  flex-wrap: wrap;
 }
 
 .login img {
   width: 7vh;
   height: 7vh;
+}
+
+@media screen and (max-width: 768px) {
+  .link {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .login {
+    width: 100%;
+    justify-content: center;
+  }
 }
