--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="./public/css/header.css" />
 <div class="navbar">
   <div class="back">
     <a href="../YnHelp"><img src="./public/assets/logo.png" alt="" /></a>
