--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,13 +4,21 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: "Foundation";
+  src: url("./public/assets/Quantum.ttf");
+}
+
 html {
   height: 100%;
   width: 100%;
 }
+body {
+  text-align: center;
+}
 
 h1 {
-  font-family: sans-serif;
+  font-family: "Foundation", sans-serif;
 }
 
 h5 {
@@ -20,17 +28,24 @@ h5 {
 .background {
   background-image: url(../assets/background.png);
   background-repeat: no-repeat;
-
   background-size: cover;
+  position: fixed;
   width: 100vw;
   height: 100vh;
-  top: 10vh;
+  left: 0;
+  z-index: -10;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
   left: 0;
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
   color: #ffffff;
+  z-index: 10;
 }
 
 .title {
