--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Noto+Sans+Syloti+Nagri&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
+
 
 body {
     height: 100%;
@@ -11,9 +12,9 @@ h2 {
     font-size: 2rem;
     text-align: center;
     margin-top: 2rem;
-    color: #000000; /* Couleur du titre */
+    color: #ffffff; /* Couleur du titre */
     font-family: 'Noto Sans Syloti Nagri', sans-serif;
-    font-family: 'Lora', serif;
+    font-family: 'Oswald', sans-serif;
 }
 
 form {
