--- a/public/views/siginusers.html
+++ b/public/views/siginusers.html
@@ -1,3 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="authusers.css" media="all" />
+    <title>SiginUser</title>
+</head>
+<body>
+    <div class="container">
+        <form >
+          <p>Creer un compte</p>
+          <input type="name" placeholder="Prénom"><br>
+          <input type="nail" placeholder="Nom"><br>
+          <input type="email" placeholder="Email"><br>
+          <input type="password" placeholder="Mot de passe"><br>
+          <input type="button" value="Inscription"><br>
+        </form>
+      
+        <div class="drop drop-1"></div>
+        <div class="drop drop-2"></div>
+        <div class="drop drop-3"></div>
+        <div class="drop drop-4"></div>
+        <div class="drop drop-5"></div>
+      </div>
+</body>
+
+<style>
+
 body {
     background: linear-gradient(45deg, #FC466B, #3F5EFB);
     height: 100vh;
@@ -15,7 +43,7 @@ body {
   form {
     background: rgba(255, 255, 255, .3);
     padding: 3rem;
-    height: 320px;
+    height: 450px;
     border-radius: 20px;
     border-left: 1px solid rgba(255, 255, 255, .3);
     border-top: 1px solid rgba(255, 255, 255, .3);
@@ -127,3 +155,6 @@ body {
     bottom: 170px; left: 90px;
     z-index: -1;
   }
+</style>
+</html>
+
