--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,12 +1,20 @@
+@font-face {
+  font-family: "quantumregular";
+  src: url(../assets/webfontkit-20230414-035239/quantum-webfont.woff2)
+      format("woff2"),
+    url(../assets/webfontkit-20230414-035239/quantum-webfont.woff)
+      format("woff");
+}
+
 * {
-  font-family: "quantum", sans-serif;
   border: 0;
   padding: 0;
+  font-family: "quantumregular", "quantum", sans-serif;
 }
 
 @font-face {
   font-family: "quantum";
-  src: url("../assets/Quantum.ttf");
+  src: url(../assets/Quantum.ttf);
 }
 
 html {
@@ -18,7 +26,7 @@ body {
 }
 
 h1 {
-  font-family: "quantum", sans-serif;
+  font-family: "quantumregular", "quantum", sans-serif;
 }
 
 h5 {
