--- a/public/views/passforget.html
+++ b/public/views/passforget.html
@@ -8,13 +8,10 @@
 <body>
     <div class="container">
         <form >
-          <p>Bienvenue</p>
+          <p>Réinitialisation Password</p>
 
           <input type="email" placeholder="Email"><br>
-          <input type="password" placeholder="Mot de passe"><br>
-          <input type="button" value="Connexion"><br>
-          <a href="passforget.html">Mot de passe oublié</a><br>
-          <a href="siginusers.html">Incription</a>
+          <input type="button" value="Envoyer"><br>
         </form>
       
         <div class="drop drop-1"></div>
@@ -44,7 +41,7 @@ body {
   form {
     background: rgba(255, 255, 255, .3);
     padding: 3rem;
-    height: 350px;
+    height: 250px;
     border-radius: 20px;
     border-left: 1px solid rgba(255, 255, 255, .3);
     border-top: 1px solid rgba(255, 255, 255, .3);
