--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -1,19 +1,22 @@
-<link rel="stylesheet" href="./public/css/header.css" />
-<div class="navbar">
-  <div class="back">
-    <a href="../YnHelp"><img src="./public/assets/logo.png" alt="" /></a>
-    <a href="../YnHelp">YnHelp</a>
-  </div>
-  <div class="search">
-    <img src="./public/assets/loupe.png" alt="" />
-    <h3>Rechercher</h3>
-  </div>
-  <div class="link">
-    <a href="../aides"> <h3>Aides</h3></a>
-    <a href="../associations"> <h3>Associations</h3></a>
-  </div>
-  <div class="login">
-    <a href="../login"><img src="./public/assets/user.png" alt="" /></a>
-    <a href="../login"><h3>Login</h3></a>
-  </div>
-</div>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Header avec boutons et barre de recherche</title>
+    <link rel="stylesheet" href="./public/css/header.css">
+    <script src="./public/script/scripts.js" defer></script>
+</head>
+<body>
+  <header>
+    <h1>Mon site de vente en ligne</h1>
+</header>
+
+<nav class="btn-categorie">
+    <a href="#">Accueil</a>
+    <a href="#">Catégories</a>
+    <a href="#">Panier</a>
+    <a href="#">Mon compte</a>
+</nav>
+</body>
+</html>
