--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,6 +3,7 @@
 
 body {
     height: 100%;
+    /* background: linear-gradient(45deg, #FC466B, #3F5EFB); */
     background:#005fa3;
     background-repeat: no-repeat;
     background-size: 100% 100%;     
