--- a/public/css/home.css
+++ b/public/css/home.css
@@ -100,7 +100,7 @@ span {
   background-image: url(../assets/alexis.jpeg);
 }
 .thomas {
-  background-image: url(../assets/ThomasCHAD.png);
+  background-image: url(../assets/Thomas.png);
 }
 .ozlem {
   background-image: url(../assets/ozlem.jpg);
