--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="login">
-    <a href="../login"><img src="./public/assets/user.png" alt="" /></a>
-    <a href="../login"><h3>Login</h3></a>
+    <a href="/YnHelp/login"><img src="./public/assets/user.png" alt="" /></a>
+    <a href="/YnHelp/login"><h3>Login</h3></a>
   </div>
 </div>
