--- a/public/css/header.css
+++ b/public/css/header.css
@@ -103,3 +103,16 @@ a:hover {
 .pipe {
   font-size: 24px;
 }
+
+.footer {
+  width: 100%;
+  height: 5vh;
+  background: #00000079;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+p {
+  color: #ffffff;
+}
