--- a/public/templates/footer.html
+++ b/public/templates/footer.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <p>&copy; 2023 YnHelp. Tous droits réservés.</p>
+  <p class="basdepage">&copy; 2023 YnHelp. Tous droits réservés.</p>
 </div>
