--- a/public/css/header.css
+++ b/public/css/header.css
@@ -109,15 +109,14 @@ a:hover {
   font-size: 24px;
 }
 
-.footer {
-  width: 100%;
-  height: 5vh;
-  background: #00000079;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+@media screen and (max-width: 768px) {
+  .link {
+    width: 100%;
+    justify-content: center;
+  }
 
-p {
-  color: #ffffff;
+  .login {
+    width: 100%;
+    justify-content: center;
+  }
 }
