--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -4,9 +4,9 @@
     <a href="../YnHelp"><h3>YnHelp</h3></a>
   </div>
   <div class="link">
-    <a href="../aides"> <h3>Aides</h3></a>
+    <a href="/YnHelp/aids"> <h3>Aides</h3></a>
     <div class="pipe"><h3>|</h3></div>
-    <a href="../associations"> <h3>Associations</h3></a>
+    <a href="/YnHelp/associations"> <h3>Associations</h3></a>
   </div>
   <div class="search">
     <img src="./public/assets/loupe.png" alt="" />
